Vibe pattern option added

--- a/pebble.html
+++ b/pebble.html
@@ -15,7 +15,16 @@
 			<h1>Cowbell Settings</h1>
 		</div>
 		<div data-role="content" data-theme="a">
-     		<input type="checkbox" name="invert">Invert display
+	   	<label for="select-native-1">Vibration Pattern:</label>
+         <select name="select-native-1" id="select-native-1">
+            <option value="1">One short</option>
+            <option value="2">Two short</option>
+            <option value="3">One Long</option>
+            <option value="4">Two Long</option>
+         </select>
+	   	<label>
+      		<input type="checkbox" name="invert">Invert display
+    		</label>
      </div>
 	</div>
 </body>
