--- a/pebble.html
+++ b/pebble.html
@@ -21,7 +21,7 @@
 	   	<div class="ui-field-contain">
          	<label for="vibePattern">Vibration Pattern:</label>
             <select name="vibePattern" id="vibePattern">
-               <option value="0">None</option>
+               <option value="0">Disabled</option>
                <option value="1">1x Short</option>
                <option value="2">2x Short</option>
                <option value="3">1x Long</option>
