--- a/cowbell1-1.html
+++ b/cowbell1-1.html
@@ -33,8 +33,11 @@
            <div style="padding-right:5px;" class="ui-block-a"><button type="submit" id="save">Save</button></div>
            <div style="padding-left:5px;" class="ui-block-b"><button type="submit" id="cancel">Cancel</button></div>	   
 			</fieldset>
-        	<input type="text" data-role="datebox" data-options='{"mode":"calbox"}'>
-     </div>
+			<div class="ui-field-contain">
+            <label for="mode7">TimeFlipBox</label>
+            <input name="mode7" id="mode7" type="text" data-role="datebox" data-options='{"mode":"timeflipbox"}' />
+         </div>
+   </div>
 	</div>
     <script>
       function saveOptions() {
